[gd_scene load_steps=7 format=3 uid="uid://rivaldo_tower_001"]

[ext_resource type="Script" path="res://militia_forge/core/component_host.gd" id="1_host"]
[ext_resource type="Resource" uid="uid://rivaldo_attack_001" path="res://examples/rivaldo-td/resources/basic_tower_attack.tres" id="2_attack"]
[ext_resource type="Script" path="res://militia_forge/components/combat/turret_component.gd" id="3_turret"]
[ext_resource type="Script" path="res://militia_forge/components/combat/targeting/closest_strategy.gd" id="4_strat"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 200.0

[sub_resource type="Resource" id="Resource_strat"]
script = ExtResource("4_strat")

[node name="Tower" type="Node2D" groups=["towers"]]

[node name="BaseVisual" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="RotatingPart" type="Node2D" parent="."]

[node name="CannonVisual" type="ColorRect" parent="RotatingPart"]
offset_top = -5.0
offset_right = 30.0
offset_bottom = 5.0
color = Color(0.2, 0.2, 0.8, 1)

[node name="FiringPoint" type="Marker2D" parent="RotatingPart"]
position = Vector2(30, 0)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="ComponentHost" type="Node2D" parent="."]
script = ExtResource("1_host")

[node name="TurretComponent" type="Node" parent="ComponentHost"]
script = ExtResource("3_turret")
detection_area_path = NodePath("../DetectionArea")
detection_range = 200.0
strategy = SubResource("Resource_strat")
rotating_part_path = NodePath("../RotatingPart")
attack_command = ExtResource("2_attack")
turn_speed = 720.0
fire_threshold = 10.0
